--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
+<script src="./lib/index.js"></script>
 <script>
     console.log('test console')
 </script>
