--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>title</title>
+        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?">
     </head>
 <body>
 <h1>Hello World</h1>
