--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>title</title>
-        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?">
+        <title>I唐小奕I</title>
+        <link rel="shortcut icon" type="image/x-icon" href="./favicon.svg?">
     </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 <script src="./lib/index.js"></script>
-<script>
-    console.log('test console')
-</script>
 </html>
